[tool.poetry]
name = "profyle"
version = "0.0.10"
description = "Profyle, a development tool for analysing and managing python traces"
authors = ["Carlos Valdivia <vpcarlos97@gmail.com>"]
maintainers = [
    "Carlos Valdivia <vpcarlos97@gmail.com>"
]
repository = "https://github.com/vpcarlos/profyle"
keywords = ["cprofile","devtool", "perffeto", "profyle", "viztracer"]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
profyle = "profyle.main:app"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
typer = {extras = ["all"], version = "^0.7.0"}
viztracer = "^0.15.6"
fastapi = ">=0.70.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest = "^7.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
